[package]
name = "sim800-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
heapless = "0.7.16"
# remove the linux hal later
linux-embedded-hal = "0.3.2"
#linux-embedded-hal = { git= "https://github.com/rust-embedded/linux-embedded-hal", tag = "v0.4.0-alpha.3" }
nb = "1.1.0"

[dev-dependencies]
#linux-embedded-hal = "0.3.2"
